Refatorada a barra de rodapé com 'Microthemer'

--- a/wp-content/micro-themes/active-styles.css
+++ b/wp-content/micro-themes/active-styles.css
@@ -18,3 +18,15 @@
 	width: 80px !important;
 }
 
+
+/*= Rodapé =================== */
+
+/** Rodapé >> Barra de Rodapé **/
+#colophon .ast-builder-grid-row-tablet-full {
+	min-height: 0 !important;
+	padding-top: 15px !important;
+	padding-bottom: 12px !important;
+	border-top-color: rgba(255, 255, 255, 0.35) !important;
+	border-top-width: 1px !important;
+}
+
